--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -9,7 +9,7 @@
             @news.Body
         </div>
         <div class = "NewsPostinfo">
-            Post created by @news.User.Username<br />
+            Post created by @news.User.UserName<br />
             Post created: @news.Date 
         </div>      
     </div>
