--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Mission.Domain.Entities
+@using Mission.WebUI.ViewModels
 @model List<Post>
 
 @{
@@ -8,4 +9,8 @@
 <h2>Home</h2>
 
 @Html.Partial("_LogOn")
+
+
+    <p>yaaaaaay</p>
+
 
