--- a/Mission.WebUI/Views/Post/CreatePost.cshtml
+++ b/Mission.WebUI/Views/Post/CreatePost.cshtml
@@ -5,7 +5,12 @@
     ViewBag.Title = "CreatePost";
 }
 
-   
+    <link href="@Url.Content("~/Content/Kendo/styles/kendo.common.min.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/Kendo/styles/kendo.default.min.css")" rel="stylesheet">
+
+    <script src="@Url.Content("~/Content/Kendo/js/jquery.min.js")"></script>
+    <script src="@Url.Content("~/Content/Kendo/js/kendo.web.min.js")"></script>
+    <script src="@Url.Content("~/Content/Kendo/examples/content/shared/js/console.js")"></script>   
 
 
 
