--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         {
             <li>@Html.ActionLink("Skapa ny post", "CreatePost", "Post")</li>
             
-            <li>@Html.ActionLink("Skapa nytt event", "CreateEvent", "Post")</li>
+            <li>@Html.ActionLink("Skapa nytt event", "CreateEvent", "Event")</li>
         }
         
     </ul>
