--- a/Mission.WebUI/Views/Post/Blog.cshtml
+++ b/Mission.WebUI/Views/Post/Blog.cshtml
@@ -9,7 +9,7 @@
 
 @foreach(var news in Model) { 
     <div class="BlogDiv">
-        <div class = "NewsTitle">
+        <div class = "BlogTitle">
             <p>@news.Title</p>
         </div>
         <div class ="BlogBody">
