--- a/Mission.WebUI/Views/Event/CreateEvent.cshtml
+++ b/Mission.WebUI/Views/Event/CreateEvent.cshtml
@@ -6,6 +6,7 @@
 
     <script src="@Url.Content("~/Content/Kendo/js/jquery.min.js")"></script>
     <script src="@Url.Content("~/Content/Kendo/js/kendo.web.min.js")"></script>
+    <script src="@Url.Content("~/Content/Kendo/examples/content/shared/js/console.js")"></script>   
  
 
 @{
@@ -23,7 +24,7 @@
        </p>
        <p>
             Beskrivning <br />
-            @Html.EditorFor(e => e.Info)
+            @Html.TextAreaFor(e => e.Description, new { id = "editor", rows ="10", cols ="30", style="width:100%", height="100%"})
        </p>
        <p>
             Stad <br />
@@ -33,6 +34,36 @@
              <div id="to-do">
                     @Html.TextBoxFor(e => e.Date, new { id = "datetimepicker", value = "10/10/2011 12:00 AM", style = "width:200px;", @class = "k-widget k-datetimepicker k-header" })
             </div>
+
+            <script>
+                $("#editor").kendoEditor({
+                    tools: [
+                "bold",
+                "italic",
+                "underline",
+                "strikethrough",
+                "fontName",
+                "fontSize",
+                "foreColor",
+                "backColor",
+                "justifyLeft",
+                "justifyCenter",
+                "justifyRight",
+                "justifyFull",
+                "insertUnorderedList",
+                "insertOrderedList",
+                "indent",
+                "outdent",
+                "formatBlock",
+                "createLink",
+                "unlink",
+                "insertImage",
+                "subscript",
+                "superscript"
+            ]
+                });
+    </script>
+
         <script>
             $(document).ready(function () {
                 // create DateTimePicker from input HTML element
