--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -11,5 +11,9 @@
         <div class = "NewsPostinfo">
             Post created: @news.Date 
         </div>      
+        <div class="Edit">
+            @Html.ActionLink("Ändra", "Edit", "Post", new { id = news.ID }, null)
+            @Html.ActionLink("Ta bort", "Delete", "Post", new { id = news.ID }, null)
+        </div>
     </div>
 }
