--- a/Mission.WebUI/Views/Post/Blog.cshtml
+++ b/Mission.WebUI/Views/Post/Blog.cshtml
@@ -6,7 +6,7 @@
 
 <div id="posts-list">
 	        	
-	        		<h2 class="page-heading"><span>BLOG</span></h2>	
+	        		<h2 class="page-heading"><span>BLOGG</span></h2>	
 @foreach(var news in Model) { 
     
     	<article class="format-standard">
