--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -63,8 +63,23 @@
 
 <body>
 <header class="clearfix">
+
+<div id="top-widget-holder">
+	<div class="wrapper">
+		<div id="top-widget">
+			<div class="padding">
+                <div class="widget-block">
+                </div>
+            </div>
+        </div>
+    </div>
+    <a href="#" id="top-open"></a>
+</div>
+
+
 <div class="wrapper">
     <h1 id="headtext" style="color:White;">Jesper Caron</h1>
+
 	<nav id="meny">
 		<ul id="nav" class="sf-menu">
             <li>@Html.ActionLink("Home", "index", "Home")</li>
