--- a/Mission.WebUI/Views/Shared/_LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/_LogOn.cshtml
@@ -1,5 +1,5 @@
 ﻿@if(Request.IsAuthenticated) {
-    <text>Welcome <strong style="text-transform:capitalize">@User.Identity.Name</strong>!
+    <text>Welcome <strong style="text-transform:capitalize">@User.Identity.Name.ToLower()</strong>!
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 }
 else {
