--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -11,9 +11,12 @@
 						<div class="excerpt">@Html.Raw(System.Web.HttpUtility.HtmlDecode(@news.Body))</div>
 						@*<a href="single.html" class="read-more">continue &#8594;</a>*@
 						<div class="meta">
-							<div class="categories">In <a href="#">Category 1</a>, <a href="#">Category 2</a></div>
-							<div class="comments"><a href="#">@Html.ActionLink("Ändra", "Edit", "Post", new { id = news.ID }, null)</a></div>
-							<div class="user"><a href="#">@Html.ActionLink("Ta bort", "Delete", "Post", new { id = news.ID }, null)</a></div>
+							<div class="categories">@news.Date.ToString("HH:mm:ss")</div>
+							 @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
+                            {
+							    <div class="comments"><a href="#">@Html.ActionLink("Ändra", "Edit", "Post", new { id = news.ID }, null)</a></div>
+							    <div class="user"><a href="#">@Html.ActionLink("Ta bort", "Delete", "Post", new { id = news.ID }, null)</a></div>
+                            }
 						</div>
 		</article>
 }
