tog bort övre menygrejen

--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 <body>
 <header class="clearfix">
 
-<div id="top-widget-holder">
+@*<div id="top-widget-holder">
 	<div class="wrapper">
 		<div id="top-widget">
 			<div class="padding">
@@ -74,7 +74,7 @@
         </div>
     </div>
     <a href="#" id="top-open"></a>
-</div>
+</div>*@
 
 
 <div class="wrapper">
