--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -6,7 +6,7 @@
 { 
     
     <article class="format-standard">
-						<div class="entry-date"><div class="number">@news.Date.Day</div><div class="year">@news.Date.Month,@news.Date.Year</div></div>
+						<div class="entry-date"><div class="number">@news.Date.Day</div><div class="year">@news.Date.ToString("MMM"),@news.Date.Year</div></div>
 						<h2  class="post-heading"><a href="single.html">@news.Title</a></h2>
 						<div class="excerpt">@Html.Raw(System.Web.HttpUtility.HtmlDecode(@news.Body))</div>
 						@*<a href="single.html" class="read-more">continue &#8594;</a>*@
