--- a/Mission.WebUI/Views/Event/Edit.cshtml
+++ b/Mission.WebUI/Views/Event/Edit.cshtml
@@ -29,10 +29,8 @@
            
         </p>
         <p>
-            Information <br />
-            
-
-            @Html.TextAreaFor(e => e.Description, new { id = "editor", rows = "10", cols = "30", style = "width:100%", height = "100%", value ="yguhb" /* @Html.Raw(System.Web.HttpUtility.HtmlDecode(@Model.Description)) */})
+            Information <br />           
+            @Html.TextAreaFor(e => e.Description, new { id = "editor", rows = "10", cols = "30", style = "width:100%", height = "100%"})
         </p>
          <p>
             Stad <br />
