--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -12,7 +12,7 @@
             <p>@events.HeadLine</p>
         </div>
         <div class ="EventDescription">
-             @Html.Raw(System.Web.HttpUtility.HtmlDecode(@events.Description))
+             @MvcHtmlString.Create(events.Description)
         </div>
         <div class = "EventInfo">
             @events.Date
