--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -6,11 +6,110 @@
     ViewBag.Title = "Jesper Caron";
 }
 
-<h2>Home</h2>
 
-@Html.Partial("_LogOn")
+    <div id="slider-holder" class="clearfix">
+					
+					<!-- slider -->
+			        <div class="flexslider home-slider">
+					  <ul class="slides">
+					    <li>
+					      <img src="@Url.Content("~/Content/img/slides/01.png")" alt="alt text" />
+                          <p class="flex-caption">"Jag är en quote"</p>
+					    </li>
+					    <li>
+					      <img src="@Url.Content("~/Content/img/slides/02.png")" alt="alt text" />
+					      <p class="flex-caption">"Jag är en annan quote"</p>
+					    </li>
+					  </ul>
+					</div>
+		        	<!-- ENDS slider -->
+		        	
+		        	<div class="home-slider-clearfix "></div>
+		        	
+		        	<!-- Headline -->
+		        	@*<div id="headline">
+		        		<h1>FRAMSTEG.NU</h1>
+		        		<p>Wall of text lol lol lol lol lol lolol lol olol. </p>
+		        		
+		        		<em id="corner"></em>
+		        	</div>*@
+                    </div>
+		        	<!-- ENDS headline -->
+		        	
+                    <div class="home-block" >
+	        		<h2 class="home-block-heading"><span>KUNDER</span></h2>
+	        		<div class="one-third-thumbs clearfix" >
+	        			<figure>
+		        			<figcaption>
+	        					<strong>Pellentesque habitant morbi</strong>
+	        					<span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</span>
+	        					<em>December 08, 2011</em>
+	        					<a href="single.html" class="opener"></a>
+			        		</figcaption>
+			        		
+			        		<a href="single.html"  class="thumb"><img src="@Url.Content("~/Content/img/kunder/01.png")" alt="Alt text" /></a>
+		        		</figure>
+		        		
+		        		<figure>
+		        			<figcaption>
+	        					<strong>Pellentesque habitant morbi</strong>
+	        					<span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</span>
+	        					<em>December 08, 2011</em>
+	        					<a href="single.html" class="opener"></a>
+			        		</figcaption>
+			        		
+			        		<a href="single.html"  class="thumb"><img src="@Url.Content("~/Content/img/kunder/02.png")" alt="Alt text" /></a>
+		        		</figure>
+		        		
+		        		<figure class="last">
+		        			<figcaption>
+	        					<strong>Pellentesque habitant morbi</strong>
+	        					<span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</span>
+	        					<em>December 08, 2011</em>
+	        					<a href="single.html" class="opener"></a>
+			        		</figcaption>
+			        		
+			        		<a href="single.html"  class="thumb"><img src="@Url.Content("~/Content/img/kunder/03.png")" alt="Alt text" /></a>
+		        		</figure>
+		        		
+		        		<figure>
+		        			<figcaption>
+	        					<strong>Pellentesque habitant morbi</strong>
+	        					<span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</span>
+	        					<em>December 08, 2011</em>
+	        					<a href="single.html" class="opener"></a>
+			        		</figcaption>
+			        		
+			        		<a href="single.html"  class="thumb"><img src="@Url.Content("~/Content/img/kunder/04.png")" alt="Alt text" /></a>
+		        		</figure>
+		        		
+		        		<figure>
+		        			<figcaption>
+	        					<strong>Pellentesque habitant morbi</strong>
+	        					<span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</span>
+	        					<em>December 08, 2011</em>
+	        					<a href="single.html" class="opener"></a>
+			        		</figcaption>
+			        		
+			        		<a href="single.html"  class="thumb"><img src="@Url.Content("~/Content/img/kunder/05.png")" alt="Alt text" /></a>
+		        		</figure>
+		        		
+		        		<figure class="last">
+		        			<figcaption>
+	        					<strong>Pellentesque habitant morbi</strong>
+	        					<span>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae.</span>
+	        					<em>December 08, 2011</em>
+	        					<a href="single.html" class="opener"></a>
+			        		</figcaption>
+			        		
+			        		<a href="single.html"  class="thumb"><img src="@Url.Content("~/Content/img/kunder/06.png")" alt="Alt text" /></a>
+		        		</figure>
+		        		
+		        		
+	        		</div>
+	        	</div>
 
-
-    <p>yaaaaaay</p>
+		        	
+				</div>
 
 
