--- a/Mission.WebUI/Views/Post/CreatePost.cshtml
+++ b/Mission.WebUI/Views/Post/CreatePost.cshtml
@@ -13,9 +13,9 @@
     <script src="@Url.Content("~/Content/Kendo/examples/content/shared/js/console.js")"></script>   
 
 
+<div id="posts-list">
 
-
-<h2>Skapa Post</h2>
+<h2 class="page-heading"><span>SKAPA POST</span></h2>
 
 @using (Html.BeginForm()){
 
@@ -73,4 +73,4 @@
     </div>
 
 
-}
+}</div>
