--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -7,6 +7,11 @@
 
 /* GENERAL ------------------------------------------------------------*/
 
+.excerpt img
+{
+    max-width:540px;   
+}
+
 #meny {
     padding-top:35px;
 }
