--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<<<<<<< HEAD
+
 <div id="posts-list">
 	        	
 	        		<h2 class="page-heading"><span>BLOGG</span></h2>
@@ -14,7 +14,7 @@
        	<article class="format-standard">
 			<div class="entry-date"><div class="number">@events.Date.Day</div><div class="year">@events.Date.ToString("MMM"),@events.Date.Year</div></div>
 			<h2  class="post-heading"><a href="single.html">@events.HeadLine</a></h2>
-			<div class="excerpt">@Html.Raw(System.Web.HttpUtility.HtmlDecode(@events.Description))</div>
+			<div class="excerpt">@MvcHtmlString.Create(@events.Description)</div>
 			@*<a href="single.html" class="read-more">continue &#8594;</a>*@
 			<div class="meta">
 				<div class="categories">@events.City</div>
