--- a/Mission.WebUI/Views/Event/Edit.cshtml
+++ b/Mission.WebUI/Views/Event/Edit.cshtml
@@ -16,8 +16,9 @@
 
 
 
+<div id="posts-list">
 
-<h2>Ändra</h2>
+<h2 class="page-heading"><span>ÄNDRA EVENT</span></h2>
 
 @using (Html.BeginForm()){
 
@@ -95,4 +96,4 @@
     </div>
 
 
-}
+}</div></div>
