--- a/Mission.WebUI/Views/Post/Edit.cshtml
+++ b/Mission.WebUI/Views/Post/Edit.cshtml
@@ -14,8 +14,9 @@
 
 
 
+<div id="posts-list">
 
-<h2>Ändra</h2>
+<h2 class="page-heading"><span>ÄNDRA POST</span></h2>
 
 @using (Html.BeginForm()){
 
@@ -73,4 +74,4 @@
     </div>
 
 
-}
+}</div></div>
