--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div id="posts-list">
 	        	
-	        		<h2 class="page-heading"><span>BLOGG</span></h2>
+	        		<h2 class="page-heading"><span>Event</span></h2>
 @foreach (var events in Model)
 { 
     
@@ -26,25 +26,3 @@
             </div>
 		</article>
 }</div></div>
-=======
-<h2>Index</h2>
-
-@foreach(var events in Model) { 
-    <div class="EventDiv">
-        <div class = "EventTitle">
-            <p>@events.HeadLine</p>
-        </div>
-        <div class ="EventDescription">
-             @MvcHtmlString.Create(events.Description)
-        </div>
-        <div class = "EventInfo">
-            @events.Date
-            @events.City
-        </div>      
-        <div class="Edit">
-             @Html.ActionLink("Ändra", "Edit", "Event", new { id = events.ID }, null)
-             @Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)
-        </div>
-    </div>
-}
->>>>>>> edit
