--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 					    </li>
 					    <li>
 					      <img src="@Url.Content("~/Content/img/slides/02.png")" alt="alt text" />
-					      <p class="flex-caption">"Jag är en annan quote"</p>
+					      @*<p class="flex-caption">"Jag är en annan quote"</p>*@
 					    </li>
 					  </ul>
 					</div>
