--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -109,6 +109,7 @@
             <li>@Html.ActionLink("Blogg", "Blog", "Post")</li>
             <li>@Html.ActionLink("Event", "index", "Event")</li>        
             <li>@Html.ActionLink("Statistik", "index", "Statistics")</li>
+            <li>@Html.ActionLink("Kontakt", "index", "Contact")</li> 
             @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
             {
                 <li>@Html.ActionLink("Skapa ny post", "CreatePost", "Post")</li>
