--- a/Mission.WebUI/Views/Post/Index.cshtml
+++ b/Mission.WebUI/Views/Post/Index.cshtml
@@ -1,11 +1,10 @@
-﻿@using Mission.Domain.Entities
-
+﻿@model List<Mission.Domain.Entities.Post>
 
 @{
     ViewBag.Title = "Nyheter";
 }
 
-@model List<Post>
+
 
 @Html.Partial("_News")
 
