--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -131,7 +131,22 @@
 
 
 <div id="footer">
+    <div class="wrapper clearfix">
 @Html.Partial("_LogOn")
+
+<aside id="contact-sidebar">
+		        		<div class="block">
+			        		<h4>Adress</h4> 		
+			        		<ul class="address-block">
+			        			<li class="address">Address line, city, state ZIP</li>
+			        			<li class="phone">+123 456 789</li>
+			        			<li class="mobile">+123 456 789</li>
+			        			<li class="email"><a href="mailto:email@server.com">test@test.com</a></li>
+			        		</ul>
+			        		
+		        		</div>	        	
+		        	</aside>
+     </div>
 </div>
 </body>
 </html>
