--- a/Mission.WebUI/Views/Shared/_News.cshtml
+++ b/Mission.WebUI/Views/Shared/_News.cshtml
@@ -1,6 +1,8 @@
-﻿<div id="posts-list">
+﻿
+
+<div id="posts-list">
 	        	
-	        		<h2 class="page-heading"><span>NYHETER</span></h2>
+	        		
 @foreach (var news in Model)
 { 
     
