--- a/Mission.WebUI/Content/css/skin.css
+++ b/Mission.WebUI/Content/css/skin.css
@@ -95,7 +95,18 @@ nav a{ color: #E2E0D7; }
 /* HOME ------------------------------------------------------------*/
 
 .home-block figcaption{
-	background: #225bcc;
+	  background-color: #49afcd;
+  background-color: #2f96b4;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+  background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+  background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+  background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+  background-repeat: repeat-x;
+  border-color: #2f96b4 #2f96b4 #1f6377;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 	color: #f1f1f1;
 }
 
@@ -164,11 +175,30 @@ article .meta{
 
 /* SLIDER ------------------------------------------------------------*/
 
-#slider-holder #headline{ background: #555; }
+#headline{ background: #555; }
 
+
+#two-thirds 
+{
+    width:66%;
+    float:left;   
+}
+
+#one-thirds 
+{
+    width:30%;
+    float:right;   
+}
 
 
 /* FOOTER ------------------------------------------------------------*/
+
+#footer 
+{
+    background-color:#333;
+   
+}
+
 
 
 footer .wrapper{
