--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -47,7 +47,7 @@ header {
 }
 
 body{
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 13px;
 }
 
@@ -297,15 +297,18 @@ nav a{
 
 #contactForm{
 	position: relative;
-	width: 700px;
+	width: 100%;
 	float: left;
 	margin-right: 20px;
 }
 
-#contact-sidebar{
+#contact-sidebar
+{
+    margin-top:20px;
+    margin-bottom:30px;
 	position: relative;
 	width: 200px; /* 220 - 20 padding */
-	float: left;
+	float: right;
 	padding: 20px 10px 20px 10px;
 	-webkit-box-shadow: 2px 2px 0px rgba(0,0,0,.2);
 	-moz-box-shadow: 2px 2px 0px rgba(0,0,0,.2);
@@ -408,6 +411,7 @@ nav a{
 	left: 0px;
 	width: 100%;
 	height: 100%;
+	
 }
 
 /* modernizr fix for ie 8 and earlier */
@@ -462,7 +466,7 @@ nav a{
 
 .home-block figcaption em{ font-weight: bold; }
 
-.one-third-thumbs figure{ width: 300px; }
+.one-third-thumbs figure{ width: 193px; }
 
 .one-fourth-thumbs figure{ width: 220px; }
 
@@ -935,25 +939,64 @@ article .meta .user{
 	float: left;
 }
 
-#slider-holder #headline{
+ #headline
+ {
+    height:306px; 
 	position: relative;
 	float: right;
 	width: 260px; /* 300 - 40 padding */
 	min-height: 275px;
-	margin-top: -58px;
 	padding: 70px 20px 20px 20px;;
-	
+	margin-top:-8px;
 	-webkit-box-shadow: 2px 2px 0px rgba(0,0,0,.2);
 	-moz-box-shadow: 2px 2px 0px rgba(0,0,0,.2);
 	-o-box-shadow: 2px 2px 0px rgba(0,0,0,.2);
 	box-shadow: 2px 2px 0px rgba(0,0,0,.2);
 	
-	text-shadow: 0 1px 0px rgba(255, 255, 255, 0.8);
 }
 
 #headline h1{ 
 	margin-bottom: 30px;
 	line-height: 1.0em;
+}
+
+#headline h2, #headline p, #headline label
+{
+    color:white;
+}
+
+#headline h2
+{
+    text-align: center;
+    margin-top: -42px;
+    margin-bottom: 33px;
+}
+
+#headline #submit
+{
+    cursor:pointer;
+    color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #49afcd;
+  background-color: #2f96b4;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+  background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+  background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+  background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+  background-repeat: repeat-x;
+  border-color: #2f96b4 #2f96b4 #1f6377;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    padding: 7px 23px;
+    border-radius: 6px;
+    font-size: 100%;
+}
+
+#headline #submit:hover
+{
+  background-color:#fff;
 }
 
 
@@ -962,10 +1005,15 @@ article .meta .user{
 	display: block;
 	position: absolute;
 	top:0px;
-	left: -14px;
+	left: -13px;
 	width: 14px;
 	height: 18px;	
 	background: url(../img/sidebar-corner.png) no-repeat;
+}
+
+#customers 
+{
+    width:102%;    
 }
 
 
