--- a/Mission.WebUI/Views/Post/Blog.cshtml
+++ b/Mission.WebUI/Views/Post/Blog.cshtml
@@ -31,19 +31,19 @@
                             }
                        </div>
                        <div class="BlogComments">
-                           <div class ="comments">@Html.Partial("_CreateComment", new Post { PostID = news.ID }) </div>
+                           <div class ="comments">@Html.Partial("_CreateComment", new Comment { BlogID = news.ID}) </div>
                            <div id="comments-wrap">
                                
 
                                @foreach (var comment in Model.BlogComment)
                                {
-                                   if (comment.PostID == news.ID)
+                                   if (comment.BlogID == news.ID)
                                    {
                                         <ol class="commentlist">
                                            <li class="comment even thread-even depth-1">
                                                <div class="comment-body clearfix">
                                                    <img width="35" height="35" class="avatar avatar-35 photo" src="http://0.gravatar.com/avatar/4f64c9f81bb0d4ee969aaf7b4a5a6f40?s=35&amp%3Bd&amp%3Br=G" alt="">
-                                                   <div class="comment-author vcard">@comment.Title</div>
+                                                   <div class="comment-author vcard">@comment.Name</div>
                                                    <div class="comment-meta commentmetadata"><span class="comment-date">@comment.Date</span></div>
                                                    <div class="comment-inner">@comment.Body</div>
                                               </div> 
