--- a/Mission.WebUI/Content/css/comments.css
+++ b/Mission.WebUI/Content/css/comments.css
@@ -1,5 +1,21 @@
 /* COMMENTS ------------------------------------------------------------*/
 
+.commentsa:hover
+{
+    cursor:pointer;
+}
+
+
+
+.BlogComments 
+{
+    display:none;
+}
+
+.selected
+{
+    
+}
 
 #comments-wrap{
 	padding-top: 40px;
