--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
 		<script src="@Url.Content("~/Content/js/css3-mediaqueries.js")"></script>
 		<script src="@Url.Content("~/Content/js/custom.js")"></script>
 		<script src="@Url.Content("~/Content/js/tabs.js")"></script>
-		
+		<script src="@Url.Content("~/Content/js/comments.js")"></script>
+
 		<!-- Tweet -->
 		<link rel="stylesheet" href="@Url.Content("~/Content/css/jquery.tweet.css")" media="all"  /> 
 		<script src="@Url.Content("~/Content/js/tweet/jquery.tweet.js")" ></script> 
