kommentarer js fungerar som det ska

--- a/Mission.WebUI/Content/css/comments.css
+++ b/Mission.WebUI/Content/css/comments.css
@@ -1,11 +1,14 @@
 /* COMMENTS ------------------------------------------------------------*/
 
-.commentsa:hover
+a:hover
 {
     cursor:pointer;
 }
 
-
+.createcomments
+{
+    display:none;
+}
 
 .BlogComments 
 {
