--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -3,26 +3,25 @@
 @{
     ViewBag.Title = "Index";
 }
-
-
 <div id="posts-list">
-	        	
-	        		<h2 class="page-heading"><span>Event</span></h2>
-@foreach (var events in Model)
-{ 
+    <h2 class="page-heading">
+        <span>Event</span></h2>
+    @foreach (var events in Model)
+    { 
     
-       	<article class="format-standard">
+        <article class="format-standard">
 			<div class="entry-date"><div class="number">@events.Date.Day</div><div class="year">@events.Date.ToString("MMM"),@events.Date.Year</div></div>
 			<h2  class="post-heading"><a href="single.html">@events.HeadLine</a></h2>
 			<div class="excerpt">@MvcHtmlString.Create(@events.Description)</div>
-			@*<a href="single.html" class="read-more">continue &#8594;</a>*@
 			<div class="meta">
 				<div class="categories">@events.City</div>
                 @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
                 {
 					<div class="comments"><a href="#">@Html.ActionLink("Ändra", "Edit", "Event", new { id = events.ID }, null)</a></div>
 					<div class="user"><a href="#">@Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)</a></div>
+                    <div class=""><a>@Html.ActionLink("Skapa eventfråga", "CreateEventQuestion", "Event", new { id = events.ID}, null)</a></div>
                 }
             </div>
 		</article>
-}</div></div>
+    }</div>
+</div> 
